WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197807
Call to JSToWasmICCallee::createStructure passes in wrong prototype value
https://bugs.webkit.org/show_bug.cgi?id=197807
Summary
Call to JSToWasmICCallee::createStructure passes in wrong prototype value
Saam Barati
Reported
2019-05-10 17:47:04 PDT
...
Attachments
patch
(3.60 KB, patch)
2019-05-10 17:51 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2019-05-10 17:48:06 PDT
<
rdar://problem/50530400
>
Saam Barati
Comment 2
2019-05-10 17:51:25 PDT
Created
attachment 369626
[details]
patch
Yusuke Suzuki
Comment 3
2019-05-10 17:52:10 PDT
Comment on
attachment 369626
[details]
patch r=me
Keith Miller
Comment 4
2019-05-10 17:52:46 PDT
Comment on
attachment 369626
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=369626&action=review
> JSTests/stress/js-to-wasm-callee-has-correct-prototype.js:1 > +//@ runDefault("--jitPolicyScale=0", "--useSamplingProfiler=1")
Don't we usually put these tests in the wasm directory?
Saam Barati
Comment 5
2019-05-10 17:53:28 PDT
(In reply to Keith Miller from
comment #4
)
> Comment on
attachment 369626
[details]
> patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=369626&action=review
> > > JSTests/stress/js-to-wasm-callee-has-correct-prototype.js:1 > > +//@ runDefault("--jitPolicyScale=0", "--useSamplingProfiler=1") > > Don't we usually put these tests in the wasm directory?
Not always. If you grep through stress you will find some Wasm tests.
Saam Barati
Comment 6
2019-05-10 17:53:58 PDT
(In reply to Saam Barati from
comment #5
)
> (In reply to Keith Miller from
comment #4
) > > Comment on
attachment 369626
[details]
> > patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=369626&action=review
> > > > > JSTests/stress/js-to-wasm-callee-has-correct-prototype.js:1 > > > +//@ runDefault("--jitPolicyScale=0", "--useSamplingProfiler=1") > > > > Don't we usually put these tests in the wasm directory? > > Not always. If you grep through stress you will find some Wasm tests.
The reason I put it here is it allowed me to do the `runDefault` at the top. That'd be different if I made it a Wasm test unfortunately.
WebKit Commit Bot
Comment 7
2019-05-10 18:40:05 PDT
Comment on
attachment 369626
[details]
patch Clearing flags on attachment: 369626 Committed
r245203
: <
https://trac.webkit.org/changeset/245203
>
WebKit Commit Bot
Comment 8
2019-05-10 18:40:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug