Call to JSToWasmICCallee::createStructure passes in wrong prototype value https://bugs.webkit.org/show_bug.cgi?id=197807 <rdar://problem/50530400>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/js-to-wasm-callee-has-correct-prototype.js: Added.
(test.getInstance):
(test):

Source/JavaScriptCore:

We were passing the empty value instead of null. However, the empty
value means the Structure is poly proto. That's definitely not the case
here.

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):


Canonical link: https://commits.webkit.org/211941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245203 268f45cc-cd09-0410-ab3c-d52691b4dbfc